// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OpinionSource /> should render a li bordered 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  className="list-group-item__opinion opinion  bg-vip"
  id="source-1"
  listItem={false}
>
  <Media
    bsClass="media"
    componentClass="div"
  >
    <MediaLeft
      bsClass="media-left"
    >
      <Connect(UserAvatarDeprecated)
        user={
          Object {
            "displayName": "author1",
            "id": "author1",
            "media": null,
            "url": "https://capco/dev/profile/author1",
            "vip": true,
          }
        }
      />
    </MediaLeft>
    <MediaBody
      bsClass="media-body"
      className="opinion__body"
      componentClass="div"
    >
      <ForwardRef(Relay(OpinionInfos))
        opinion={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "author1",
              "id": "author1",
              "media": null,
              "url": "https://capco/dev/profile/author1",
              "vip": true,
            },
            "id": "1",
          }
        }
        rankingThreshold={null}
      />
      <ForwardRef(Relay(TrashedMessage))
        contribution={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "author1",
              "id": "author1",
              "media": null,
              "url": "https://capco/dev/profile/author1",
              "vip": true,
            },
            "id": "1",
          }
        }
      >
        <ForwardRef(Relay(OpinionSourceTitle))
          source={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "displayName": "author1",
                "id": "author1",
                "media": null,
                "url": "https://capco/dev/profile/author1",
                "vip": true,
              },
              "id": "1",
            }
          }
        />
        <ForwardRef(Relay(OpinionSourceContent))
          source={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "displayName": "author1",
                "id": "author1",
                "media": null,
                "url": "https://capco/dev/profile/author1",
                "vip": true,
              },
              "id": "1",
            }
          }
        />
      </ForwardRef(Relay(TrashedMessage))>
      <div
        className="small"
      >
        <ForwardRef(Relay(Connect(OpinionSourceButtons)))
          source={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "displayName": "author1",
                "id": "author1",
                "media": null,
                "url": "https://capco/dev/profile/author1",
                "vip": true,
              },
              "id": "1",
            }
          }
          sourceable={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "id": "sourceableId",
            }
          }
        />
      </div>
    </MediaBody>
  </Media>
</ListGroupItem>
`;

exports[`<OpinionSource /> should render a white li if not vip 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  className="list-group-item__opinion opinion "
  id="source-1"
  listItem={false}
>
  <Media
    bsClass="media"
    componentClass="div"
  >
    <MediaLeft
      bsClass="media-left"
    >
      <Connect(UserAvatarDeprecated)
        user={
          Object {
            "displayName": "author1",
            "id": "author1",
            "media": null,
            "url": "https://capco/dev/profile/author1",
            "vip": false,
          }
        }
      />
    </MediaLeft>
    <MediaBody
      bsClass="media-body"
      className="opinion__body"
      componentClass="div"
    >
      <ForwardRef(Relay(OpinionInfos))
        opinion={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "author1",
              "id": "author1",
              "media": null,
              "url": "https://capco/dev/profile/author1",
              "vip": false,
            },
            "id": "1",
          }
        }
        rankingThreshold={null}
      />
      <ForwardRef(Relay(TrashedMessage))
        contribution={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "author1",
              "id": "author1",
              "media": null,
              "url": "https://capco/dev/profile/author1",
              "vip": false,
            },
            "id": "1",
          }
        }
      >
        <ForwardRef(Relay(OpinionSourceTitle))
          source={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "displayName": "author1",
                "id": "author1",
                "media": null,
                "url": "https://capco/dev/profile/author1",
                "vip": false,
              },
              "id": "1",
            }
          }
        />
        <ForwardRef(Relay(OpinionSourceContent))
          source={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "displayName": "author1",
                "id": "author1",
                "media": null,
                "url": "https://capco/dev/profile/author1",
                "vip": false,
              },
              "id": "1",
            }
          }
        />
      </ForwardRef(Relay(TrashedMessage))>
      <div
        className="small"
      >
        <ForwardRef(Relay(Connect(OpinionSourceButtons)))
          source={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "displayName": "author1",
                "id": "author1",
                "media": null,
                "url": "https://capco/dev/profile/author1",
                "vip": false,
              },
              "id": "1",
            }
          }
          sourceable={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "id": "sourceableId",
            }
          }
        />
      </div>
    </MediaBody>
  </Media>
</ListGroupItem>
`;
